feat: banking-grade improvements - Flyway, audit trail, idempotency, tests
Banking-grade enhancements:
- Replace ddl-auto with Flyway versioned migrations (V1-V3)
- Add immutable transaction audit trail (CREATE/UPDATE/DELETE)
- Add idempotency key support for POST requests (X-Idempotency-Key)
- Add sensitive data masking in audit logs (auth/password endpoints)
- Add rate limiting filter with configurable thresholds
- Add HttpMessageNotReadableException handler (400 for malformed JSON)
- Fix Budget entity reserved-word columns (month to budget_month)

Test suite (71 tests across 11 test classes):
- AnalyticsServiceTest (12), RecurringTransactionServiceTest (9)
- ExportServiceTest (5), TransactionServiceTest (5), BudgetServiceTest (5)
- CategoryServiceTest (5), TransactionRepositoryTest (4)
- AuthControllerIntegrationTest (7), ProfileControllerIntegrationTest (6)
- InputValidationTest (12), FinSightApplicationTests (1)

Deployment:
- Add production profile (application-prod.properties) with env vars
- Add Docker multi-stage builds (backend + frontend)
- Add docker-compose with MySQL, Redis, backend, frontend
- Add nginx reverse proxy config for SPA and API routing
- Remove build artifacts from tracking (frontend/dist, tsbuildinfo)
- Rewrite README with full API docs and architecture overview